--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dev.financ$</title>
+    <title>dev.finance$</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1 id="logo">dev.financ$</h1>
+      <h1 id="logo">dev.finance$</h1>
     </header>
 
-    <main>
+    <main class="container">
       <section id="balance">
         <h2>Balanço</h2>
             <div class="card">
@@ -23,7 +27,7 @@
                 <p>R$ 2.000,00</p>
             </div>
 
-            <div class="card">
+            <div class="card total">
                 <h3>Total</h3>
                 <p>R$ 3.000,00</p>
             </div>
@@ -31,7 +35,7 @@
 
       <section id="transaction">
         <h2>Transações</h2>
-        <table id="date-table">
+        <table id="data-table">
           <thead>
             <tr>
               <th>Descrição</th>
@@ -41,19 +45,19 @@
           </thead>
           <tbody>
             <tr>
-              <td>Luz</td>
-              <td>- R$ 500,00</td>
-              <td>14/01/2021</td>
+              <td class="description">Luz</td>
+              <td class="expense">- R$ 500,00</td>
+              <td class="date">14/01/2021</td>
             </tr>
             <tr>
-              <td>Criação Video Motion</td>
-              <td>R$ 5.000,00</td>
-              <td>10/01/2021</td>
+              <td class="description">Criação Video Motion</td>
+              <td class="income">R$ 5.000,00</td>
+              <td class="date">10/01/2021</td>
             </tr>
             <tr>
-              <td>Internet</td>
-              <td>- R$ 150,00</td>
-              <td>15/01/2021</td>
+              <td class="description">Internet</td>
+              <td class="expense">- R$ 200,00</td>
+              <td class="date">15/01/2021</td>
             </tr>
           </tbody>
         </table>
@@ -61,6 +65,6 @@
 
     </main>
 
-    <footer><p>dev.financ$</p></footer>
+    <footer><p>dev.finance$</p></footer>
   </body>
 </html>
